# real-time-chat-app

./: .env.example  .gitignore  app.py  pyproject.toml
apps/: __init__.py
apps/chat/: routes.py
apps/user/: routes.py
config/: __init__.py  app.py  database.py
database/: db.sqlite
forms/: login.py  register.py
models/: message.py  user.py
static/css/: style.css
static/js/: chat.js  index.js  login.js  signup.js  users.js
templates/: index.html
templates/layouts/: base.jinja
templates/pages/: chat.jinja  login.jinja  signup.jinja  users.jinja
tests/: run.py
tests/functionnal/: test_app.py  test_user.py
utils/: utils.py
